# packages/api/openapi/openapi.json
@@ -118,6 +118,16 @@
             "hmac": []
           }
         ],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Idempotency-Key",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
